openshift/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: openshift-nodejs
  name: openshift-nodejs
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: openshift-nodejs
    deploymentconfig: openshift-nodejs
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: openshift-nodejs
        deploymentconfig: openshift-nodejs
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/two/openshift-nodejs
        imagePullPolicy: Always
        name: openshift-nodejs
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
