openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openshift-nodejs
  name: openshift-nodejs
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: openshift-nodejs
    deploymentconfig: openshift-nodejs
  sessionAffinity: None
  type: ClusterIP
